--- a/restfuloauth2/oauth/templates/management.html
+++ b/restfuloauth2/oauth/templates/management.html
@@ -3,37 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="My website containing contact information and a blog">
+    <meta name="description" content="Oauth management">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>marcbperez</title>
+    <title>Oauth management</title>
 
-    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="{{ url_for('oauth.static', filename='favicon.ico') }}" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('oauth.static', filename='favicon.ico') }}" type="image/x-icon">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.teal-red.min.css">
-
-    <style>
-    .mdl-layout__content {
-      padding-bottom: 50px;
-    }
-
-    .mdl-data-table {
-      max-width: 900px;
-    }
-
-    .mdl-button {
-      margin-bottom: 30px;
-    }
-
-    .mdl-textfield {
-      margin-left: 20px;
-      max-width: 200px;
-      position:relative;
-      top: -15px;
-    }
-    </style>
+    <link rel="stylesheet" href="{{ url_for('oauth.static', filename='style.css') }}">
   </head>
   <body>
     <div class="mdl-layout mdl-js-layout mdl-color--grey-100">
@@ -41,10 +21,8 @@
 
         <div class="mdl-grid">
           <div class="mdl-cell mdl-cell--12-col">
-            <h2>Users ({{ users|length }})</h2>
+            <h3>Users ({{ users|length }})</h3>
             <form method="post" action="{{ url_for('oauth.management') }}">
-              <input type="submit" name='submit' value='Add User'
-              class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
               <div class="mdl-textfield mdl-js-textfield">
                 <input class="mdl-textfield__input" type="text" id="username" name="username" required>
                 <label class="mdl-textfield__label" for="username">Username</label>
@@ -53,11 +31,14 @@
                 <input class="mdl-textfield__input" type="password" id="password" name="password" required>
                 <label class="mdl-textfield__label" for="password">Password</label>
               </div>
+              <br/>
+              <input type="submit" name='submit' value='Add User'
+              class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
             </form>
             <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
               <thead>
                 <tr>
-                  <th>ID</th>
+                  <th class="mdl-data-table__cell--non-numeric">ID</th>
                   <th class="mdl-data-table__cell--non-numeric">Username</th>
                   <th class="mdl-data-table__cell--non-numeric">Password Hash</th>
                 </tr>
@@ -65,7 +46,7 @@
               <tbody>
                 {% for user in users %}
                 <tr>
-                  <td>{{ user.id }}</td>
+                  <td class="mdl-data-table__cell--non-numeric">{{ user.id }}</td>
                   <td class="mdl-data-table__cell--non-numeric">{{ user.username }}</td>
                   <td class="mdl-data-table__cell--non-numeric">{{ user.hashpw }}</td>
                 </tr>
@@ -77,7 +58,7 @@
 
         <div class="mdl-grid">
           <div class="mdl-cell mdl-cell--12-col">
-            <h2>Clients ({{ clients|length }})</h2>
+            <h3>Clients ({{ clients|length }})</h3>
             <form method="post" action="{{ url_for('oauth.management') }}">
               <input type="submit" name='submit' value='Add Client'
               class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
@@ -85,7 +66,7 @@
             <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
               <thead>
                 <tr>
-                  <td class="mdl-data-table__cell--non-numeric">ID</th>
+                  <th class="mdl-data-table__cell--non-numeric">ID</th>
                   <th class="mdl-data-table__cell--non-numeric">Type</th>
                 </tr>
               </thead>
@@ -94,6 +75,34 @@
                 <tr>
                   <td class="mdl-data-table__cell--non-numeric">{{ client.client_id }}</td>
                   <td class="mdl-data-table__cell--non-numeric">{{ client.client_type }}</td>
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+          </div>
+        </div>
+
+        <div class="mdl-grid">
+          <div class="mdl-cell mdl-cell--12-col">
+            <h3>Tokens ({{ tokens|length }})</h3>
+            <table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
+              <thead>
+                <tr>
+                  <th class="mdl-data-table__cell--non-numeric">ID</th>
+                  <th class="mdl-data-table__cell--non-numeric">Type</th>
+                  <th class="mdl-data-table__cell--non-numeric">User ID</th>
+                  <th class="mdl-data-table__cell--non-numeric">Client ID</th>
+                  <th class="mdl-data-table__cell--non-numeric">Expires</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for token in tokens %}
+                <tr>
+                  <td class="mdl-data-table__cell--non-numeric">{{ token.id }}</td>
+                  <td class="mdl-data-table__cell--non-numeric">{{ token.token_type }}</td>
+                  <td class="mdl-data-table__cell--non-numeric">{{ token.user_id }}</td>
+                  <td class="mdl-data-table__cell--non-numeric">{{ token.client_id }}</td>
+                  <td class="mdl-data-table__cell--non-numeric">{{ token.expires }}</td>
                 </tr>
                 {% endfor %}
               </tbody>
