--- a/restfuloauth2/oauth/templates/management.html
+++ b/restfuloauth2/oauth/templates/management.html
@@ -3,13 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Oauth management">
+    <meta name="description" content="OAuth2 Management">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-    <title>Oauth management</title>
-
+    <title>OAuth2 Management</title>
     <link rel="shortcut icon" href="{{ url_for('oauth.static', filename='favicon.ico') }}" type="image/x-icon">
     <link rel="icon" href="{{ url_for('oauth.static', filename='favicon.ico') }}" type="image/x-icon">
-
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.teal-red.min.css">
@@ -18,13 +16,14 @@
   <body>
     <div class="mdl-layout mdl-js-layout mdl-color--grey-100">
       <main class="mdl-layout__content">
-
+        <!-- Tabbed layout. -->
         <div class="mdl-tabs mdl-js-tabs mdl-js-ripple-effect">
           <div class="mdl-tabs__tab-bar">
             <a href="#users" class="mdl-tabs__tab is-active">Users ({{ users|length }})</a>
             <a href="#clients" class="mdl-tabs__tab">Clients ({{ clients|length }})</a>
             <a href="#tokens" class="mdl-tabs__tab">Tokens ({{ tokens|length }})</a>
           </div>
+          <!-- User tab. -->
           <div class="mdl-tabs__panel is-active" id="users">
             <div class="mdl-grid">
               <div class="mdl-cell mdl-cell--2-col"></div>
@@ -63,6 +62,7 @@
               </div>
             </div>
           </div>
+          <!-- Client tab. -->
           <div class="mdl-tabs__panel" id="clients">
             <div class="mdl-grid">
               <div class="mdl-cell mdl-cell--2-col"></div>
@@ -90,6 +90,7 @@
               </div>
             </div>
           </div>
+          <!-- Token tab. -->
           <div class="mdl-tabs__panel" id="tokens">
             <div class="mdl-grid">
               <div class="mdl-cell mdl-cell--2-col"></div>
@@ -105,7 +106,7 @@
                   </thead>
                   <tbody>
                     {% for token in tokens %}
-                    <tr>
+                    <tr onclick="alert('{{ token.access_token }}')">
                       <td class="mdl-data-table__cell--non-numeric">{{ token.id }}</td>
                       <td class="mdl-data-table__cell--non-numeric">{{ token.user_id }}</td>
                       <td class="mdl-data-table__cell--non-numeric">{{ token.client_id }}</td>
@@ -118,10 +119,9 @@
             </div>
           </div>
         </div>
-
       </main>
     </div>
-
+    <!-- Footer scripts. -->
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   </body>
 </html>
